--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: jcbhmr/setup-cargo-component@v1
+    - uses: egor-tensin/setup-gcc@v1
+      with:
+        version: latest
+        platform: x64
 
     - run: cargo component build
 
