--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2024"
 fn_ops = "0.1.0"
 wasmtime = "30.0.2"
 wasmtime-wasi = "30.0.2"
+protocol = { path = "./protocol" }
+rmp-serde = "1.3.0"
